--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -55,9 +55,9 @@
   "extensions": [
     {
       "id": "extRust",
-      "commandDarwin": "${NL_PATH}/extensions/rust/target/release/ext-rust ${NL_PATH}",
-      "commandLinux": "${NL_PATH}/extensions/rust/target/release/ext-rust ${NL_PATH}",
-      "commandWindows": "${NL_PATH}\\extensions\\rust\\target\\release\\ext-rust.exe ${NL_PATH}"
+      "commandDarwin": ""\"${NL_PATH}/extensions/rust/target/release/ext-rust"\" "\"${NL_PATH}"\"",
+      "commandLinux": ""\"${NL_PATH}/extensions/rust/target/release/ext-rust"\" "\"${NL_PATH}"\"",
+      "commandWindows": ""\"${NL_PATH}\\extensions\\rust\\target\\release\\ext-rust.exe"\" "\"${NL_PATH}"\""
     }
   ],
   "buildScript": {
