--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -41,8 +41,8 @@
     "resourcesPath": "/resources/",
     "extensionsPath": "/extensions/",
     "clientLibrary": "/resources/js/neutralino.js",
-    "binaryVersion": "5.3.0",
-    "clientVersion": "5.3.0"
+    "binaryVersion": "6.4.0",
+    "clientVersion": "6.4.0"
   },
   "nativeAllowList": [
     "app.*",
@@ -55,9 +55,9 @@
   "extensions": [
     {
       "id": "extRust",
-      "commandDarwin": ""\"${NL_PATH}/extensions/rust/target/release/ext-rust"\" "\"${NL_PATH}"\"",
-      "commandLinux": ""\"${NL_PATH}/extensions/rust/target/release/ext-rust"\" "\"${NL_PATH}"\"",
-      "commandWindows": ""\"${NL_PATH}\\extensions\\rust\\target\\release\\ext-rust.exe"\" "\"${NL_PATH}"\""
+      "commandDarwin": "\"${NL_PATH}/extensions/rust/target/release/ext-rust\" \"${NL_PATH}\"",
+      "commandLinux": "\"${NL_PATH}/extensions/rust/target/release/ext-rust\" \"${NL_PATH}\"",
+      "commandWindows": "\"${NL_PATH}\\extensions\\rust\\target\\release\\ext-rust.exe\" \"${NL_PATH}\""
     }
   ],
   "buildScript": {
